# ecdis

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  rustfmt.toml
.github/actions/checkout-platform-sibling/: action.yml
.github/workflows/: ci.yml
docs/: shipping-licenses.md
ecdis-behaviours/: ARCHITECTURE.md  Cargo.toml  README.md
ecdis-behaviours/src/: alarm_sink.rs  lib.rs  nav_alert_kind.rs  stderr_alarm_sink.rs
ecdis-portrayal/: ARCHITECTURE.md  Cargo.toml  README.md
ecdis-portrayal-viewer/: Cargo.toml  README.md  build.rs
ecdis-portrayal-viewer/src/: main.rs  viewer_ui.rs
ecdis-portrayal-viewer/ui/: viewer.slint
ecdis-portrayal/examples/: chart_preview_svg.rs  feature_graph_preview_svg.rs
ecdis-portrayal/src/: catalogue_backed.rs  catalogue_loader.rs  chart_theme.rs  chart_viewport.rs  cpu_outline.rs  display_mode.rs  feature_graph_frame.rs  frame.rs  lib.rs  symbol_render.rs
ecdis-portrayal/src/catalogue_backed/: feature_portrayal_draft.rs  mod.rs  portrayal_setup_error.rs
ecdis-portrayal/src/chart_viewport/: chart_viewport.rs  chart_viewport_state.rs  mod.rs
ecdis-portrayal/src/cpu_outline/: chart_pixel_transform.rs  cpu_outline_portrayal.rs  mod.rs
ecdis-portrayal/src/portrayal/: mod.rs  no_portrayal.rs  portray_error.rs  portrayal_pipeline.rs
ecdis-portrayal/tests/: portrayal_display_mode.rs  s164_portrayal_pipeline.rs
ecdis-runtime/: ARCHITECTURE.md  Cargo.toml  README.md
ecdis-runtime/src/: main.rs
ecdis-ui/: ARCHITECTURE.md  Cargo.toml  DISTRIBUTION.md  README.md  build.rs
ecdis-ui/licenses/: THIRD_PARTY_NOTICES  THIRD_PARTY_NOTICES.header
ecdis-ui/src/: gpl_notice.rs  main.rs
ecdis-ui/tests/: s164_dev_dependency_smoke.rs
ecdis-ui/ui/: app.slint  license_dialog.slint
iho/: README.md
iho-testdata/: ARCHITECTURE.md  Cargo.toml  README.md
iho-testdata/expectations/: s64_v1_2_0.json
iho-testdata/src/: lib.rs  main.rs
iho-testdata/tests/: corpus_integration.rs
iho/s-100/: ARCHITECTURE.md
iho/s-100/src/: framework_stub.rs  geometry.rs  lib.rs
iho/s-101/: ARCHITECTURE.md  Cargo.toml  README.md
iho/s-101/examples/: dump_dssi.rs  dump_record_tags.rs
iho/s-102/: ARCHITECTURE.md  README.md
iho/s-103/: ARCHITECTURE.md  README.md
iho/s-111/: README.md
iho/s-112/: README.md
iho/s-121/: README.md
iho/s-122/: Cargo.toml  README.md
iho/s-123/: README.md
iho/s-124/: Cargo.toml  README.md
iho/s-125/: ARCHITECTURE.md  Cargo.toml  README.md
iho/s-126/: ARCHITECTURE.md  README.md
iho/s-127/: ARCHITECTURE.md  Cargo.toml  README.md
iho/s-128/: ARCHITECTURE.md  Cargo.toml  README.md
iho/s-129/: Cargo.toml
iho/s-130/: README.md
iho/s-131/: Cargo.toml  README.md
iho/s-164/: Cargo.toml  README.md
iho/s-61/: ARCHITECTURE.md  README.md
iho/s-97/: ARCHITECTURE.md  README.md
iho/s-98/: Cargo.toml  README.md
iho/s-99/: Cargo.toml  README.md
iso8211/: ARCHITECTURE.md  Cargo.toml  README.md
iso8211/examples/: print.rs
iso8211/src/: data_descriptive_file.rs  directory.rs  directory_entry.rs  entry_map.rs  error.rs  leader.rs  lib.rs  reader.rs
iso8211/src/ddr/: data_descriptive_field.rs  data_descriptive_record.rs  data_structure.rs  data_type.rs  field_controls.rs  file_control_field.rs  format.rs  format_controls.rs  lexical_level.rs  mod.rs
iso8211/src/dr/: data_field.rs  data_record.rs  mod.rs
iso8211/tests/: s164_corpus.rs
pelorus-adapter/: ARCHITECTURE.md  Cargo.toml  README.md
pelorus-adapter/src/: bridge.rs  lib.rs  mapper.rs
pelorus-adapter/src/mapper/: core_sample_mapper.rs  fusion_clock.rs  mod.rs  stream_instant.rs  timed_ais_target.rs  timed_own_ship.rs  unconfigured_mapper.rs
pelorus-core-adapter/: ARCHITECTURE.md  Cargo.toml  README.md
pelorus-core-adapter/src/: lib.rs
pelorus-ecdis/: ARCHITECTURE.md  Cargo.toml  README.md
pelorus-ecdis/src/: ais.rs  bridge.rs  lib.rs  own_ship.rs
s-100/: ARCHITECTURE.md  Cargo.toml  README.md
s-100/src/: feature_id.rs  lib.rs
s-101/: ARCHITECTURE.md  Cargo.toml  README.md
s-101/examples/: count_points.rs  debug_graph.rs  dump_c2il.rs  dump_field_hex.rs  dump_spas_rrn.rs
s-101/src/: binary.rs  dataset.rs  decode.rs  edition.rs  error.rs  fc_catalog.rs  geometry.rs  graph.rs  lib.rs  semantic.rs
s-101/src/fc/: edition.rs  mod.rs
s-101/src/portrayal_catalog/: color_palette.rs  color_palette_item.rs  color_profile.rs  color_token_decl.rs  error.rs  mod.rs  portrayal_catalogue.rs  xml_util.rs
s-101/src/record/: curve.rs  dataset.rs  identifier.rs  mrid.rs  surface.rs
s-101/tests/: optional_fixture.rs  s164_corpus_integration.rs
s-102/: Cargo.toml  README.md
s-102/src/: lib.rs
s-103/: ARCHITECTURE.md  Cargo.toml  README.md
s-104/: ARCHITECTURE.md  Cargo.toml  README.md
s-111/: ARCHITECTURE.md  Cargo.toml
s-111/src/: lib.rs
s-112/: ARCHITECTURE.md  Cargo.toml  README.md
s-112/src/: lib.rs
s-121/: ARCHITECTURE.md  Cargo.toml  README.md
s-121/src/: lib.rs
s-122/: ARCHITECTURE.md  Cargo.toml  README.md
s-122/src/: lib.rs
s-123/: ARCHITECTURE.md  Cargo.toml  README.md
s-123/src/: lib.rs
s-124/: ARCHITECTURE.md  Cargo.toml
s-124/src/: lib.rs
s-125/: Cargo.toml  README.md
s-125/src/: lib.rs
s-126/: Cargo.toml  README.md
s-127/: Cargo.toml
s-127/src/: lib.rs
s-128/: Cargo.toml  README.md
s-129/: ARCHITECTURE.md  Cargo.toml  README.md
s-129/src/: lib.rs
s-130/: ARCHITECTURE.md  Cargo.toml  README.md
s-130/src/: lib.rs
s-131/: ARCHITECTURE.md  Cargo.toml  README.md
s-131/src/: lib.rs
s-164/: ARCHITECTURE.md  Cargo.toml  README.md
s-164/examples/: inventory.rs  parse_catalog_xml.rs
s-164/src/: archive.rs  cache.rs  catalogue.rs  corpus.rs  download.rs  error.rs  lib.rs  verify.rs
s-61/: Cargo.toml  README.md
s-61/src/: lib.rs
s-97/: Cargo.toml  README.md
s-97/src/: lib.rs
s-98/: ARCHITECTURE.md  Cargo.toml  README.md
s-99/: ARCHITECTURE.md  Cargo.toml  README.md
scripts/: create-gpl-source-offer.sh  fetch_s64_sample_enc.sh  generate-third-party-notices.sh
testdata/: README.md
yocto/meta-pelorus-ecdis/: README.md
(+109 files in other folders)
