[workspace]
resolver = "2"
members = [
    "ecdis-behaviours",
    "ecdis-portrayal",
    "ecdis-runtime",
    "ecdis-ui",
    "iso8211",
    "iho-testdata",
    "pelorus-core-adapter",
    "pelorus-ecdis",
    "s-100",
    "s-101",
    "s-102",
    "s-103",
    "s-104",
    "s-111",
    "s-112",
    "s-121",
    "s-122",
    "s-123",
    "s-124",
    "s-125",
    "s-126",
    "s-127",
    "s-128",
    "s-129",
    "s-130",
    "s-131",
    "s-164",
    "s-61",
    "s-97",
    "s-98",
    "s-99",
]

[profile.release]
lto = "thin"

[profile.release.package.ecdis-ui]
codegen-units = 1
