[workspace]
resolver = "2"
members = [
    "ecdis-behaviours",
    "ecdis-portrayal",
    "ecdis-runtime",
    "ecdis-ui",
    "iso8211",
    "pelorus-adapter",
    "iho/s-100",
    "iho/s-101",
    "iho/s-102",
    "iho/s-103",
    "iho/s-104",
    "iho/s-111",
    "iho/s-112",
    "iho/s-121",
    "iho/s-122",
    "iho/s-123",
    "iho/s-124",
    "iho/s-125",
    "iho/s-126",
    "iho/s-127",
    "iho/s-128",
    "iho/s-129",
    "iho/s-130",
    "iho/s-131",
    "iho/s-164",
    "iho/s-61",
    "iho/s-97",
    "iho/s-98",
    "iho/s-99",
]

[profile.release]
lto = "thin"

[profile.release.package.ecdis-ui]
codegen-units = 1
