[package]
name = "ecdis-behaviours"
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
authors = ["René Herrero <https://github.com/reneherrero>"]
description = "ECDIS-oriented behaviour stubs (overscale, alarms) — IMO logic incremental."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pelorus-marine/ecdis"
publish = false

[dependencies]
