[package]
name = "ecdis-portrayal"
version = "0.0.1"
edition = "2024"
rust-version = "1.90.0"
authors = ["Pelorus Marine contributors <https://github.com/pelorus-marine>"]
description = "Portrayal pipeline traits for S-101 charts (AML integration stub)."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pelorus-marine/ecdis"
publish = false

[dependencies]
s-101 = { path = "../s-101" }
