[package]
name = "ecdis-runtime"
version = "0.0.1"
edition = "2024"
rust-version = "1.90.0"
authors = ["Pelorus Marine contributors <https://github.com/pelorus-marine>"]
description = "Composition-root demo: ENC load + ChartNavContext + portrayal/behaviour stubs."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pelorus-marine/ecdis"
publish = false

[[bin]]
name = "ecdis-runtime"
path = "src/main.rs"

[dependencies]
ecdis-behaviours = { workspace = true }
ecdis-portrayal = { workspace = true }
pelorus-adapter = { workspace = true }
s-101 = { workspace = true }
