[package]
name = "ecdis-ui"
version = "0.0.1"
edition = "2021"
rust-version = "1.88"
authors = ["René Herrero <https://github.com/reneherrero>"]
description = "Slint Wayland UI shell for ENC load + ChartNavContext (IVI-style demo)."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pelorus-marine/ecdis"
publish = false
build = "build.rs"

[[bin]]
name = "ecdis-ui"
path = "src/main.rs"

[dependencies]
ecdis-behaviours = { path = "../ecdis-behaviours" }
ecdis-portrayal = { path = "../ecdis-portrayal" }
pelorus-core-adapter = { path = "../pelorus-core-adapter" }
pelorus-ecdis = { path = "../pelorus-ecdis" }
s-101 = { path = "../s-101" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
slint = { version = "1.16.1", default-features = false, features = [
    "std",
    "compat-1-2",
    "backend-winit",
    "renderer-femtovg",
] }

[build-dependencies]
slint-build = "1.16.1"
