[package]
name = "ecdis-ui"
version = "0.0.1"
edition = "2024"
rust-version = "1.90.0"
authors = ["Pelorus Marine contributors <https://github.com/pelorus-marine>"]
description = "Slint Wayland UI shell for ENC load + ChartNavContext (IVI-style demo)."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pelorus-marine/ecdis"
publish = false
build = "build.rs"

[[bin]]
name = "ecdis-ui"
path = "src/main.rs"

[dependencies]
ecdis-behaviours = { workspace = true }
ecdis-portrayal = { workspace = true }
pelorus-adapter = { workspace = true }
s-101 = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
slint = { version = "1.16.1", default-features = false, features = [
    "std",
    "compat-1-2",
    "backend-winit",
    "renderer-femtovg",
] }

[dev-dependencies]
s-164 = { workspace = true }
zip = { workspace = true }

[build-dependencies]
slint-build = "1.16.1"
