[package]
name = "iho-testdata"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
authors = ["René Herrero <https://github.com/reneherrero>"]
description = "End-to-end IHO S-164 corpus fetch plus S-101 ENC parse (orchestration library + binary + CI integration tests)."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pelorus-marine/ecdis"
publish = false

[[bin]]
name = "iho-testdata"
path = "src/main.rs"

[dependencies]
s-164 = { path = "../s-164" }
s-101 = { path = "../s-101" }
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
