[package]
name = "s-100"
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
authors = ["Pelorus Marine contributors <https://github.com/pelorus-marine>"]
description = "IHO S-100 Universal Hydrographic Data Model — shared Rust types (stub)."
readme = "README.md"
keywords = ["iho", "s-100", "hydrography", "ecdis", "enc"]
categories = ["science", "parser-implementations"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pelorus-marine/ecdis"

[dependencies]
