[package]
name = "s-102"
version = "0.0.1"
edition = "2021"
rust-version = "1.88"
authors = ["René Herrero <https://github.com/reneherrero>"]
description = "IHO S-102 Bathymetric Surface — Rust types and parsers (stub)."
readme = "README.md"
keywords = ["iho", "s-102", "bathymetry", "s-100", "ecdis"]
categories = ["science", "parser-implementations"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pelorus-marine/ecdis"

[dependencies]
