[package]
name = "s-111"
version = "0.0.1"
edition = "2021"
rust-version = "1.88"
authors = ["René Herrero <https://github.com/reneherrero>"]
description = "IHO S-111 Surface Currents — Rust types and parsers (stub)."
readme = "README.md"
keywords = ["iho", "s-111", "currents", "s-100", "ecdis"]
categories = ["science", "parser-implementations"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pelorus-marine/ecdis"

[dependencies]
