[package]
name = "s-112"
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
authors = ["Pelorus Marine contributors <https://github.com/pelorus-marine>"]
description = "IHO S-112 (Reserved / open product slot) — Rust placeholder."
readme = "README.md"
keywords = ["iho", "s-112", "s-100", "hydrography", "ecdis"]
categories = ["science", "parser-implementations"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pelorus-marine/ecdis"
