[package]
name = "s-122"
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
authors = ["René Herrero <https://github.com/reneherrero>"]
description = "IHO S-122 (Marine protected areas) — Rust placeholder."
readme = "README.md"
keywords = ["iho", "s-122", "s-100", "hydrography", "ecdis"]
categories = ["science", "parser-implementations"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pelorus-marine/ecdis"
