[package]
name = "s-129"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
authors = ["René Herrero <https://github.com/reneherrero>"]
description = "IHO S-129 Under Keel Clearance Management — Rust types and parsers (stub)."
readme = "README.md"
keywords = ["iho", "s-129", "ukc", "s-100", "ecdis"]
categories = ["science", "parser-implementations"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pelorus-marine/ecdis"

[dependencies]
