[package]
name = "s-130"
version = "0.0.1"
edition = "2021"
rust-version = "1.88"
authors = ["René Herrero <https://github.com/reneherrero>"]
description = "IHO S-130 (Polygonal demarcations of global sea areas) — Rust placeholder."
readme = "README.md"
keywords = ["iho", "s-130", "s-100", "hydrography", "ecdis"]
categories = ["science", "parser-implementations"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pelorus-marine/ecdis"
