[package]
name = "s-61"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
authors = ["René Herrero <https://github.com/reneherrero>"]
description = "IHO S-61 (Raster Navigational Charts (RNC)) — Rust placeholder."
readme = "README.md"
keywords = ["iho", "s-61", "s-100", "hydrography", "ecdis"]
categories = ["science", "parser-implementations"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pelorus-marine/ecdis"
