[package]
name = "s-97"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
authors = ["René Herrero <https://github.com/reneherrero>"]
description = "IHO S-97 (Guidelines for S-100 product specifications) — Rust placeholder."
readme = "README.md"
keywords = ["iho", "s-97", "s-100", "hydrography", "ecdis"]
categories = ["science", "parser-implementations"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pelorus-marine/ecdis"
